@@ -1,0 +1,9 @@
+#!/bin/sh
+
+# Run this to generate a new configure script
+
+if [ -x yate-gtk -a -x ../run ]; then
+    cd ..; exec ./run --executable clients/yate-gtk "$@"
+else
+    echo "Could not find client executable or run script" >&2
+fi
