@@ -579,6 +579,7 @@ AC_CONFIG_FILES([yate.spec
                  Makefile
                  engine/Makefile
                  modules/Makefile
+                 clients/Makefile
                  scripts/Makefile
                  conf.d/Makefile
                  contrib/iax/Makefile
